# app/Http/Api/Schemas/Users/UpdateProfile.php
@@ -1,0 +1,35 @@
+<?php
+
+/**
+ * @OA\Schema(
+ *     type="object",
+ *     title="Update user profile response",
+ *     description="Update user profile response",
+ * )
+ */
+class UpdateProfile
+{
+
+/**
+     * @OA\Property(
+     *     title="Name",
+     *     description="Name of key for updating",
+     *     example="random",
+     * )
+     *
+     * @var string
+     */
+    public $name;
+
+    /**
+     * @OA\Property(
+     *     title="Email",
+     *     description="Email for updating",
+     *     example="example@gmail.com",
+     * )
+     *
+     * @var string
+     */
+    public $email;
+
+}
