# routes/api.php
@@ -18,11 +18,11 @@ use App\Http\Controllers\API\UserController;
 
 Route::post('register', [PassportAuthController::class, 'register']);
 Route::post('login', [PassportAuthController::class, 'login']);
-
 Route::middleware('auth:api')->group(function ()
 {
     Route::group(['middleware' => ['role:User']], function ()
     {
         Route::get('profile', [UserController::class, 'userProfile']);
+        Route::put('update', [UserController::class, 'updateProfile']);
     });
 });
