# storage/api-docs/api-docs.json
@@ -133,6 +133,51 @@
                     }
                 ]
             }
+        },
+        "/update": {
+            "put": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Update Profile",
+                "operationId": "update",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateProfile"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Updated Profile",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UpdateProfile"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "$ref": "#/components/schemas/BadRequest"
+                    },
+                    "404": {
+                        "$ref": "#/components/schemas/Notfound"
+                    },
+                    "403": {
+                        "$ref": "#/components/schemas/Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -269,6 +314,25 @@
                             "email": "example@gmail.com",
                             "token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJhdWQiOiIxIiwianRpIjoiNDdjOWJmMDUwNzY4ZTM2ZGY0MWI3ZjU4OWU3MTk0M2NiNmI5MDg4MzdmMDY1ZjliMzVjODViMDUyMjZhMGFmOTAxMTAwMjZmNWVkZWY2M2YiLCJpYXQiOjE2MzQxMjEzMTcuODU1NzIsIm5iZiI6MTYzNDEyMTMxNy44NTU3MjYsImV4cCI6MTY2NTY1NzMxNy44MTk2NDksInN1YiI6IjgiLCJzY29wZXMiOltdfQ.rCXEb81s33RWToO6HsZsp9wpi14pSaiDSqGF7mX3kRBprUs9wtQqK7nDXhJkpDuWSdoFe7UB96tN9DjssZ6i6LkHiTAXV1PqB23O0CTpdV4d_NQgUE4ccUwQTzVRhNCK9oKAwBFLrnng9keeJ4jYLmZhlO2P3xk1kkHfZuxFMHh3ETOwu7V9hSJjxJH2WHTXrolE6iVbtkf6oYoxYaTdJ5Icw34HYUcx-ETXVKGH0_dZ3rm85rhgLt9nnCDKB7HNNU0sI-d-VueFtwIbaAB05XWrHhjOnVhRKsheAEeKIC8Y3bqV3rxjn8Of5pZ0vU0wfVXDMjDzZDRT9TDfpRlsAYL2Q88ncLizbcaAj4_xuMEyu3S-SAevsmfdgkwxuVqTRkcYMBksUmmP5eN6NeKGB9-LhRy7rphEk-W2SNFY5gNLPLkttokBRKISsGzv6bItfR6cJNDaQL1VVKoXsZkr7CpSfTY-oespoA0MEZB4Rs-j53aW4n0RlkLuh0ny4EbRG76MsgglUEoHuhKsZej2rTBmJsqftY9AZOw2Z4_n1yP0KPjQkIdRH9ghV30pXVXjYtoI5jaPPR0QgZgIG9sNmv8fpQyq8f4thy7YOuy9A9ufLYa7wmkBpG19DjgYVL7HcM_bREof6A2cffsYKCkuX3ziJ7BVgaWmC73FVakacqg"
                         }
+                    }
+                },
+                "type": "object"
+            },
+            "UpdateProfile": {
+                "title": "Update user profile response",
+                "description": "Update user profile response",
+                "properties": {
+                    "name": {
+                        "title": "Name",
+                        "description": "Name of key for updating",
+                        "type": "string",
+                        "example": "random"
+                    },
+                    "email": {
+                        "title": "Email",
+                        "description": "Email for updating",
+                        "type": "string",
+                        "example": "example@gmail.com"
                     }
                 },
                 "type": "object"
